# payva

./: .bandit  .coveragerc  .env.example  .gitignore  README.md  docker-compose.staging.yml  mypy.ini  netlify.toml  requirements-dev.txt
frontend/auditpulse_mvp/: .env.test  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_rule.py
frontend/auditpulse_mvp/admin/: __init__.py  admin_api.py  system_admin.py  tenant_admin.py
frontend/auditpulse_mvp/alembic/: env.py
frontend/auditpulse_mvp/alerts/: __init__.py  email.py  notification_service.py  scheduler.py  slack.py  sms.py
frontend/auditpulse_mvp/api/: docs.py  middleware.py
frontend/auditpulse_mvp/auditpulse_mvp/: main.py
frontend/auditpulse_mvp/auth/: auth_service.py
frontend/auditpulse_mvp/core/: frontend.py
frontend/auditpulse_mvp/dashboard/: __init__.py  components.py  dashboard.py  requirements.txt  run_dashboard.py  test_simple.py  test_simple_2.py
frontend/auditpulse_mvp/database/: models.py  session.py
frontend/auditpulse_mvp/deployment/: Dockerfile  Dockerfile.dashboard  README.md
frontend/auditpulse_mvp/feedback/: feedback_service.py
frontend/auditpulse_mvp/gpt_engine/: gpt_engine.py
frontend/auditpulse_mvp/ingestion/: plaid.py
frontend/auditpulse_mvp/learning/: feedback_learning.py
frontend/auditpulse_mvp/middleware/: security.py
frontend/auditpulse_mvp/ml_engine/: ml_engine.py  model_manager.py
frontend/auditpulse_mvp/notifications/: __init__.py  config.py  notification_manager.py  notification_service.py  providers.py  (+1 more)
(+342 files in other folders)
